--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ org.gradle.configuration-cache=false
 minecraft_version=1.21.11
 loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
+mineskin_client_version=3.2.1-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
